fix homepage overflow issue

--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -11,11 +11,9 @@ $ui-text-selection-color: #aec3d65d;
 
 // UI SPACING VARIABLES
 @mixin main-app-padding {
-    padding: 50px 80px;
-    padding-top: 0;
+    padding: 0 80px;
 
     @media screen and (max-width: 600px) {
-        padding: 20px 30px;
-        padding-top: 0;
+        padding: 0 30px;
     }
 };
